lib_LTLIBRARIES = libudt.la

libudt_la_SOURCES = api.cpp buffer.cpp ccc.cpp channel.cpp common.cpp \
		    control.cpp core.cpp list.cpp packet.cpp queue.cpp \
                    window.cpp md5.cpp \
		    api.h  buffer.h  ccc.h  channel.h  common.h  \
		    control.h  core.h  list.h  md5.h  packet.h  \
	            queue.h  udt.h  window.h	

libudt_la_LDFLAGS = -version-info  @LIBVER@:0

include_HEADERS = udt.h ccc.h packet.h
